# y4-clipboardMN

./: .gitignore  Cargo.toml  README.md
completions/: _y1-clipboard  _y4-clipboard
docs/: ARCHITECTURE.md  PERFORMANCE.md  README_ja.md
src/: main.rs
src/cli/: cleaning.rs  copy_to.rs  daemon.rs  formatter.rs  help.rs  list.rs  mod.rs  paste_from.rs  search.rs  show.rs  store.rs  utils.rs
src/core/: constants.rs  mod.rs
src/daemon/: mod.rs
src/storage/: mod.rs
src/wayland/: mod.rs  state.rs
src/wayland/handlers/: mod.rs  seat.rs
src/wayland/handlers/data_control/: device.rs  mod.rs  source.rs
